# simpleTK

./: .gitignore  CMakeLists.txt  CornerOverlay.cpp  CornerOverlay.h  DcmWidgetElement.cpp  DcmWidgetElement.h  LICENSE  MPRMaker.cpp  MPRMaker.h  OverlayInfo.h  README.md  TagDialog.cpp  TagDialog.h  TagDialog.ui  VtkInclude.h  main.cpp  simpleTK.cpp  simpleTK.h  simpleTK.qrc  simpleTK.ui  transferfunction.cpp  transferfunction.h  utility.h  vtkBoxWidget3DCallback.cpp  vtkBoxWidget3DCallback.h  vtkResliceActor.cpp  vtkResliceCallback.h  vtkResliceCursorCallback.h  vtkReslicePlaneCursorWidget.cpp  vtkReslicePlaneCursorWidget.h  vtkResliceRotator.cpp  vtkResliceTranslator.cpp  vtkResliceTranslator.h  vtkResliceWidget.cpp  vtkResliceWidget.h  vtkWidget3D.cpp  vtkWidget3D.h  vtkWidgetBase.cpp  vtkWidgetBase.h  vtkWidgetMPR.cpp  (+12 more)
res/SLC/: 0000.dcm  0001.dcm  0002.dcm  0003.dcm  0004.dcm  0005.dcm  0006.dcm  0007.dcm  0008.dcm  0009.dcm  0010.dcm  0011.dcm  0012.dcm  0013.dcm  0014.dcm  0015.dcm  0016.dcm  0017.dcm  0018.dcm  0019.dcm  0020.dcm  0021.dcm  0022.dcm  0023.dcm  0024.dcm  0025.dcm  0026.dcm  0027.dcm  0028.dcm  0029.dcm  0030.dcm  0031.dcm  0032.dcm  0033.dcm  0034.dcm  0035.dcm  0036.dcm  0037.dcm  0038.dcm  0039.dcm  (+280 more)
